[package]
name = "babelfish"
version = "0.1.1"
authors = ["Ivan Tham <pickfire@riseup.net>"]
edition = "2018"
description = "Universal translater for encodings"
repository = "https://github.com/pickfire/babelfish"
readme = "README.md"
keywords = ["translate", "convert", "format", "cbor2json"]
categories = ["command-line-utilities", "encoding"]
license = "MIT OR Apache-2.0"

[dependencies]
serde-transcode = "1.0"
serde_cbor = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }
serde_toml = { version = "0.4", optional = true, package = 'toml' }

[features]
default = ["cbor", "json", "toml"]
cbor = ["serde_cbor"]
json = ["serde_json"]
toml = ["serde_toml"]

[[bin]]
name = "cbor2json"
required-features = ["cbor", "json"]

[[bin]]
name = "cbor2toml"
required-features = ["cbor", "toml"]

[[bin]]
name = "json2cbor"
required-features = ["json", "cbor"]

[[bin]]
name = "json2toml"
required-features = ["json", "toml"]

[[bin]]
name = "toml2cbor"
required-features = ["toml", "cbor"]

[[bin]]
name = "toml2json"
required-features = ["toml", "json"]
