[package]
name = "babelfish"
version = "0.1.3"
authors = ["Ivan Tham <pickfire@riseup.net>"]
edition = "2018"
description = "Universal translater for encodings"
repository = "https://github.com/pickfire/babelfish"
readme = "README.md"
keywords = ["translate", "convert", "format", "cbor2json"]
categories = ["command-line-utilities", "encoding"]
license = "MIT OR Apache-2.0"

[dependencies]
serde-transcode = "1.0"
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
serde_toml = { version = "0.5", optional = true, package = 'toml' }
serde_yaml = { version = "0.8", optional = true }

[features]
default = ["cbor", "json", "toml", "yaml"]
cbor = ["serde_cbor"]
json = ["serde_json"]
toml = ["serde_toml"]
yaml = ["serde_yaml"]

[[bin]]
name = "cbor2json"
required-features = ["cbor", "json"]

[[bin]]
name = "cbor2toml"
required-features = ["cbor", "toml"]

[[bin]]
name = "cbor2yaml"
required-features = ["cbor", "yaml"]

[[bin]]
name = "json2cbor"
required-features = ["json", "cbor"]

[[bin]]
name = "json2toml"
required-features = ["json", "toml"]

[[bin]]
name = "json2yaml"
required-features = ["json", "yaml"]

[[bin]]
name = "toml2cbor"
required-features = ["toml", "cbor"]

[[bin]]
name = "toml2json"
required-features = ["toml", "json"]

[[bin]]
name = "toml2yaml"
required-features = ["toml", "yaml"]

[[bin]]
name = "yaml2cbor"
required-features = ["yaml", "cbor"]

[[bin]]
name = "yaml2json"
required-features = ["yaml", "json"]

[[bin]]
name = "yaml2toml"
required-features = ["yaml", "toml"]
